# treeCheck

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: toolchain-mingw-w64.cmake
docs/: protokoll.md
include/: modes.h  node.h  stats.h  tree.h  visualiser.h
src/: main.cpp  modes.cpp  stats.cpp  tree.cpp  visualiser.cpp
tests/: duplicates.txt  invalid.txt  test_all.cpp
